[REFACTOR]: Support retry logic and always use bulkwrite when saving
