# jaclang_jaseci/jaseci/routers/user.py
@@ -1,12 +1,14 @@
 """User APIs."""
 
-from bson import ObjectId
+from os import getenv
 
 from fastapi import APIRouter, Request, status
 from fastapi.exceptions import HTTPException
 from fastapi.responses import ORJSONResponse
 
 from passlib.hash import pbkdf2_sha512
+
+from pymongo.errors import ConnectionFailure, OperationFailure
 
 from ..dtos import (
     UserChangePassword,
@@ -24,47 +26,73 @@ from ..security import (
     verify_code,
 )
 from ..utils import Emailer, logger
-from ...core.architype import Root
-from ...core.context import JaseciContext
+from ...core.architype import BulkWrite, NodeAnchor, Root
 
+
+RESTRICT_UNVERIFIED_USER = getenv("RESTRICT_UNVERIFIED_USER") == "true"
 router = APIRouter(prefix="/user", tags=["user"])
 
 User = BaseUser.model()  # type: ignore[misc]
 
 
 @router.post("/register", status_code=status.HTTP_200_OK)
-async def register(request: Request, req: User.register_type()) -> ORJSONResponse:  # type: ignore
+async def register(req: User.register_type()) -> ORJSONResponse:  # type: ignore
     """Register user API."""
-    jcxt = JaseciContext.get()
-    await jcxt.build()
-
     async with await User.Collection.get_session() as session:
         async with session.start_transaction():
-            try:
-                root = Root()
-                anchor = root.__jac__
-                anchor.root = None
-                await anchor.save(session)
+            root = Root().__jac__
 
-                req_obf: dict = req.obfuscate()
-                req_obf["root_id"] = root.__jac__.id
-                is_activated = req_obf["is_activated"] = not Emailer.has_client()
+            req_obf: dict = req.obfuscate()
+            req_obf["root_id"] = root.id
+            is_activated = req_obf["is_activated"] = not Emailer.has_client()
 
-                result = await User.Collection.insert_one(req_obf, session=session)
-                if result and not is_activated:
-                    User.send_verification_code(await create_code(result), req.email)
-                await session.commit_transaction()
-            except Exception:
-                logger.exception("Error commiting user registration!")
-                result = None
+            retry = 0
+            max_retry = BulkWrite.SESSION_MAX_TRANSACTION_RETRY
+            while retry <= max_retry:
+                try:
+                    await NodeAnchor.Collection.insert_one(root.serialize(), session)
+                    if id := (
+                        await User.Collection.insert_one(req_obf, session=session)
+                    ).inserted_id:
+                        await BulkWrite.commit(session)
+                        if not is_activated:
+                            User.send_verification_code(
+                                await create_code(id), req.email
+                            )
+                        return ORJSONResponse(
+                            {"message": "Successfully Registered!"}, 201
+                        )
+                except (ConnectionFailure, OperationFailure) as ex:
+                    if ex.has_error_label("TransientTransactionError"):
+                        retry += 1
+                        logger.error(
+                            "Error executing bulk write! "
+                            f"Retrying [{retry}/{max_retry}] ..."
+                        )
+                        continue
+                    logger.exception("Error executing bulk write!")
+                    await session.abort_transaction()
+                    break
+                except Exception:
+                    logger.exception("Error executing bulk write!")
+                    await session.abort_transaction()
+                    break
+    return ORJSONResponse({"message": "Registration Failed!"}, 409)
 
-                await session.abort_transaction()
 
-    await jcxt.close()
-    if result:
-        return ORJSONResponse({"message": "Successfully Registered!"}, 201)
+@router.post(
+    "/send-verification-code",
+    status_code=status.HTTP_200_OK,
+    dependencies=authenticator,
+)
+async def send_verification_code(request: Request) -> ORJSONResponse:
+    """Verify user API."""
+    user: BaseUser = request._user
+    if user.is_activated:
+        return ORJSONResponse({"message": "Account is already verified!"}, 400)
     else:
-        return ORJSONResponse({"message": "Registration Failed!"}, 409)
+        User.send_verification_code(await create_code(user.id), user.email)
+        return ORJSONResponse({"message": "Successfully sent verification code!"}, 200)
 
 
 @router.post("/verify")
@@ -85,8 +113,8 @@ async def root(req: UserRequest) -> ORJSONResponse:
     if not user or not pbkdf2_sha512.verify(req.password, user.password):
         raise HTTPException(status_code=400, detail="Invalid Email/Password!")
 
-    if not user.is_activated:
-        User.send_verification_code(await create_code(ObjectId(user.id)), req.email)
+    if RESTRICT_UNVERIFIED_USER and not user.is_activated:
+        User.send_verification_code(await create_code(user.id), req.email)
         raise HTTPException(
             status_code=400,
             detail="Account not yet verified! Resending verification code...",
@@ -110,7 +138,7 @@ async def change_password(request: Request, ucp: UserChangePassword) -> ORJSONRe
             with_pass
             and pbkdf2_sha512.verify(ucp.old_password, with_pass.password)
             and await User.Collection.update_one(
-                {"_id": ObjectId(user.id)},
+                {"_id": user.id},
                 {"$set": {"password": pbkdf2_sha512.hash(ucp.new_password).encode()}},
             )
         ):
@@ -124,7 +152,7 @@ async def forgot_password(ufp: UserForgotPassword) -> ORJSONResponse:
     """Forgot password API."""
     user = await User.Collection.find_by_email(ufp.email)
     if isinstance(user, User):
-        User.send_reset_code(await create_code(ObjectId(user.id), True), user.email)
+        User.send_reset_code(await create_code(user.id, True), user.email)
         return ORJSONResponse({"message": "Reset password email sent!"}, 200)
     else:
         return ORJSONResponse({"message": "Failed to process forgot password!"}, 403)
